Fixed major config selection, node dragging, and edge creating issues. These broke during last refactor but reavealing a subtle issue when we have two NeoWorkflowEngine instances created. Streamlined event handling. Added autoForms, schema, and workflow-api hook. Fixed mouseUp and muoseDown, portMouseUp and portMouseDown issues in NodeView.
